--- a/docs/src/styles/index.scss
+++ b/docs/src/styles/index.scss
@@ -17,7 +17,7 @@ body{
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translate(-50%, -50%);
 }
 
 $lightblue: #25d5fd;
